# types-dataclasses-json

./: README.md  pyproject.toml
dataclasses_json-stubs/: api.pyi  cfg.pyi  core.pyi  mm.pyi  undefined.pyi
