[tool.poetry]
name = "types-dataclasses-json"
version = "0.5.9"
description = "Type stubs for dataclasses-json"
authors = ["Mahyar Mirrashed <mahyar+pypi@mirrashed.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mahyarmirrashed/types-dataclasses-json"
packages = [{ include = "dataclasses_json-stubs" }]
exclude = ["dataclasses_json-stubs/__init__.py"]

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
